--- a/web/src/app/results/results.component.html
+++ b/web/src/app/results/results.component.html
@@ -76,9 +76,8 @@
             <h5>Follow Us</h5>
             <p>Check our social media pages for winner announcements and latest updates!</p>
             <div class="social-links">
-              <a href="#" class="social-link">Facebook</a>
-              <a href="#" class="social-link">Twitter</a>
-              <a href="#" class="social-link">Instagram</a>
+              <a href="https://www.facebook.com/profile.php?id=61585225540252" target="_blank" class="social-link">Facebook</a>
+              <a href="https://x.com/total82997" target="_blank" class="social-link">Twitter</a>
             </div>
           </div>
         </div>
