--- a/web/src/app/about/about.component.html
+++ b/web/src/app/about/about.component.html
@@ -95,7 +95,7 @@
             <img src="assets/images/f2.png" alt="Security">
           </div>
           <h4 class="title">100% Secure</h4>
-          <p class="text">All transactions are protected by Crowdstrike and Wiz security layers.</p>
+          <p class="text">All entries are protected by CrowdStrike and Wiz security layers.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
