--- a/web/src/app/shared/components/footer/footer.component.html
+++ b/web/src/app/shared/components/footer/footer.component.html
@@ -34,14 +34,14 @@
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="copyr-text">
-            <span>Copyright © 2020.All Rights Reserved By</span>
+            <span>Copyright © 2026.All Rights Reserved By</span>
             <a href="#">Total Free Lotto</a>
           </div>
         </div>
         <div class="col-lg-6 align-self-center">
           <ul class="footer-social-links">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61585225540252" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://x.com/total82997" target="_blank"><i class="fab fa-twitter"></i></a></li>
           </ul>
         </div>
       </div>
